[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/MainMenu/TitleScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/WorldMap/WorldMap.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/CardTable/CardTable.tscn" type="PackedScene" id=5]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1600.0
margin_bottom = -900.0
mouse_filter = 1
script = ExtResource( 1 )

[node name="TitleScreen" parent="." instance=ExtResource( 2 )]

[node name="Player" parent="." instance=ExtResource( 3 )]
visible = false

[node name="WorldMapTest" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Canvas_CardTable" type="CanvasLayer" parent="."]
layer = 2

[node name="CardTable" parent="Canvas_CardTable" instance=ExtResource( 5 )]
visible = false
margin_left = 1.0
margin_right = 1.0
[connection signal="next_turn" from="Canvas_CardTable/CardTable" to="." method="_on_CardTable_next_turn"]
